Dockerfile and docker compose setup for services

--- a/tasker/.env.example
+++ b/tasker/.env.example
@@ -2,6 +2,10 @@ PORT=4000
 
 JWT_SECRET=2s@5df8g9h0j1k2l3m4n5b6v7c8x9z0
 
+DEFAULT_ADMIN_USERNAME=task@admin
+DEFAULT_ADMIN_PASSWORD=123456
+DEFAULT_ADMIN_EMAIL=tasker.admin@tasker.com
+
 USER_MICROSERVICE_HOST=localhost
 USER_MICROSERVICE_PORT=4002
 
